--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ENV_SILENT=true node server.js",
-    "test": "node ace test"
+    "migrate": "ENV_SILENT=true node ace migration:run --force"
   },
   "keywords": [
     "meetups",
